# swagger.yaml
@@ -265,6 +265,53 @@ paths:
                   $ref: '#/definitions/User'
               totalCount:
                 type: integer
+  /user/filter/{type}:
+    get:
+      tags:
+        - user
+      summary: Get a list of users
+      description: Returns an array of User. If the user is not authenticated or is not an admin only some fields are populated
+      parameters:
+        - name: type
+          in: path
+          required: true
+          type: string
+        - name: offset
+          in: query
+          required: false
+          type: integer
+        - name: limit
+          in: query
+          required: false
+          type: integer
+        - name: search
+          in: query
+          required: false
+          type: string
+        - name: orderBy
+          in: query
+          required: false
+          description: The order by value should be a key of User.
+          type: string
+        - name: orderDir
+          in: query
+          required: false
+          type: string
+          enum:
+            - ORDER_ASC
+            - ORDER_DESC
+      responses:
+        '200':
+          description: 'Successful operation'
+          schema:
+            type: object
+            properties:
+              users:
+                type: array
+                items:
+                  $ref: '#/definitions/User'
+              totalCount:
+                type: integer
   /user/{username}/toggle/vip:
     patch:
       tags:
